Switching to material

--- a/src/app/components/navigation/navbar/navbar.component.html
+++ b/src/app/components/navigation/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav>
+<mat-toolbar>
   <app-logo></app-logo>
 
   <div>
@@ -17,4 +17,4 @@
   </div>
 
   <app-user></app-user>
-</nav>
+</mat-toolbar>
