--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,14 +1,80 @@
-:root{
-    --text-black-color: #222222;
-    --text-secondary-color: #555555;
-    --background-secondary-color: #242424;
-    --text-secondary-color-hover: #000000;
-    --text-color-reversed: #dadada;
-    --text-color-reversed-highlighted: #fff;
-    --background: #f5f5f5;
-    --background-darker: #dbdbdb;
-}
-body{
-    margin: 0;
-    padding: 0;
-}
+@use '@angular/material' as mat;
+@include mat.core();
+
+// ---- Primary palette (kolor przewodni)
+$primary: (
+  0:   #000000,
+  10:  #0f0f0f,
+  20:  #1a1a1a,
+  30:  #242424, // kolor bazowy
+  40:  #2e2e2e,
+  50:  #3a3a3a,
+  60:  #545454,
+  70:  #6e6e6e,
+  80:  #a3a3a3,
+  90:  #d6d6d6,
+  95:  #eeeeee,
+  99:  #fafafa,
+  100: #ffffff
+);
+
+// ---- Secondary palette (kolor pomocniczy)
+$secondary: (
+  0:   #222222,
+  10:  #333333,
+  20:  #444444,
+  30:  #555555, // z komentarza text-secondary-color
+  40:  #666666,
+  50:  #777777,
+  60:  #888888,
+  70:  #999999,
+  80:  #aaaaaa,
+  90:  #bbbbbb,
+  95:  #cccccc,
+  99:  #dddddd,
+  100: #ffffff
+);
+
+// ---- Neutral palette (tła)
+$neutral: (
+  0:   #f5f5f5, // background
+  10:  #e0e0e0,
+  20:  #dbdbdb, // background-darker
+  30:  #c0c0c0,
+  40:  #a3a3a3,
+  50:  #888888,
+  60:  #6e6e6e,
+  70:  #555555,
+  80:  #424242,
+  90:  #242424, // background-secondary
+  95:  #111111,
+  99:  #080808,
+  100: #000000
+);
+
+// ---- Theme definition
+$my-theme: mat.define-theme((
+  color: (
+    theme-type: light,
+    primary: $primary,
+    secondary: $secondary,
+    neutral: $neutral,
+  ),
+  typography: mat.define-typography-config(
+    $font-family: 'Roboto, "Helvetica Neue", sans-serif'
+  )
+));
+
+// ---- Apply theme to all components
+@include mat.all-component-themes($my-theme);
+
+// :root{
+//     --text-black-color: #222222;
+//     --text-secondary-color: #555555;
+//     --background-secondary-color: #242424;
+//     --text-secondary-color-hover: #000000;
+//     --text-color-reversed: #dadada;
+//     --text-color-reversed-highlighted: #fff;
+//     --background: #f5f5f5;
+//     --background-darker: #dbdbdb;
+// }
