--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,80 +1,43 @@
+
+// Include theming for Angular Material with `mat.theme()`.
+// This Sass mixin will define CSS variables that are used for styling Angular Material
+// components according to the Material 3 design spec.
+// Learn more about theming and how to use it for your application's
+// custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
 @include mat.core();
+@import './theme-colors';
+html {
+  @include mat.theme((
+    color: mat.define-light-theme((
+      primary: map.get($_palettes, primary),
+      secondary: map.get($_palettes, secondary),
+      tertiary: map.get($_palettes, tertiary),
+      neutral: map.get($_palettes, neutral),
+      'neutral-variant': map.get($_palettes, 'neutral-variant'),
+      error: map.get($_palettes, error),
+    )),
+    typography: Roboto,
+    density: 0,
+  ));
+}
 
-// ---- Primary palette (kolor przewodni)
-$primary: (
-  0:   #000000,
-  10:  #0f0f0f,
-  20:  #1a1a1a,
-  30:  #242424, // kolor bazowy
-  40:  #2e2e2e,
-  50:  #3a3a3a,
-  60:  #545454,
-  70:  #6e6e6e,
-  80:  #a3a3a3,
-  90:  #d6d6d6,
-  95:  #eeeeee,
-  99:  #fafafa,
-  100: #ffffff
-);
+body {
+  // Default the application to a light color theme. This can be changed to
+  // `dark` to enable the dark color theme, or to `light dark` to defer to the
+  // user's system settings.
+  color-scheme: light;
 
-// ---- Secondary palette (kolor pomocniczy)
-$secondary: (
-  0:   #222222,
-  10:  #333333,
-  20:  #444444,
-  30:  #555555, // z komentarza text-secondary-color
-  40:  #666666,
-  50:  #777777,
-  60:  #888888,
-  70:  #999999,
-  80:  #aaaaaa,
-  90:  #bbbbbb,
-  95:  #cccccc,
-  99:  #dddddd,
-  100: #ffffff
-);
+  // Set a default background, font and text colors for the application using
+  // Angular Material's system-level CSS variables. Learn more about these
+  // variables at https://material.angular.dev/guide/system-variables
+  background-color: var(--mat-sys-surface);
+  color: var(--mat-sys-on-surface);
+  font: var(--mat-sys-body-medium);
 
-// ---- Neutral palette (tła)
-$neutral: (
-  0:   #f5f5f5, // background
-  10:  #e0e0e0,
-  20:  #dbdbdb, // background-darker
-  30:  #c0c0c0,
-  40:  #a3a3a3,
-  50:  #888888,
-  60:  #6e6e6e,
-  70:  #555555,
-  80:  #424242,
-  90:  #242424, // background-secondary
-  95:  #111111,
-  99:  #080808,
-  100: #000000
-);
+  // Reset the user agent margin.
+  margin: 0;
+}
 
-// ---- Theme definition
-$my-theme: mat.define-theme((
-  color: (
-    theme-type: light,
-    primary: $primary,
-    secondary: $secondary,
-    neutral: $neutral,
-  ),
-  typography: mat.define-typography-config(
-    $font-family: 'Roboto, "Helvetica Neue", sans-serif'
-  )
-));
-
-// ---- Apply theme to all components
-@include mat.all-component-themes($my-theme);
-
-// :root{
-//     --text-black-color: #222222;
-//     --text-secondary-color: #555555;
-//     --background-secondary-color: #242424;
-//     --text-secondary-color-hover: #000000;
-//     --text-color-reversed: #dadada;
-//     --text-color-reversed-highlighted: #fff;
-//     --background: #f5f5f5;
-//     --background-darker: #dbdbdb;
-// }
+html, body { height: 100%; }
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
