Migration to material angular

--- a/src/_theme-colors.scss
+++ b/src/_theme-colors.scss
@@ -4,122 +4,123 @@
 @use 'sass:map';
 @use '@angular/material' as mat;
 
-// Note: Color palettes are generated from primary: 27935A, secondary: 5F6360, tertiary: 9AA09C, neutral: 5F6360, neutral variant: 9AA09C, error: D32F2F
+// Note: Color palettes are generated from primary: 3B82F6, secondary: #242424
 $_palettes: (
   primary: (
     0: #000000,
-    10: #00210f,
-    20: #00391d,
-    25: #004525,
-    30: #00522d,
-    35: #005f35,
-    40: #006d3d,
-    50: #168850,
-    60: #3ba368,
-    70: #58bf81,
-    80: #75db9a,
-    90: #91f8b5,
-    95: #c2ffd2,
-    98: #e9ffec,
-    99: #f5fff4,
+    10: #001a42,
+    20: #002e6a,
+    25: #00397f,
+    30: #004395,
+    35: #004fab,
+    40: #005ac2,
+    50: #2573e6,
+    60: #4d8eff,
+    70: #81aaff,
+    80: #adc6ff,
+    90: #d8e2ff,
+    95: #edf0ff,
+    98: #f9f9ff,
+    99: #fefbff,
     100: #ffffff,
   ),
   secondary: (
-    0: #000000,
-    10: #181c1a,
-    20: #2d312f,
-    25: #383c3a,
-    30: #444845,
-    35: #4f5350,
-    40: #5b5f5c,
-    50: #747875,
-    60: #8e928e,
-    70: #a8aca8,
-    80: #c4c7c4,
-    90: #e0e3df,
-    95: #eef2ed,
-    98: #f7faf6,
-    99: #fafdf9,
+    0:   #000000,
+    10:  #121212,
+    20:  #1c1c1c,
+    25:  #202020,
+    30:  #242424,
+    35:  #2e2e2e,
+    40:  #242424, // ← target
+    50:  #3d3d3d,
+    60:  #575757,
+    70:  #727272,
+    80:  #9b9b9b,
+    90:  #cfcfcf,
+    95:  #e7e7e7,
+    98:  #f5f5f5,
+    99:  #fafafa,
     100: #ffffff,
   ),
+
   tertiary: (
     0: #000000,
-    10: #171d1a,
-    20: #2c322f,
-    25: #373d3a,
-    30: #424845,
-    35: #4e5451,
-    40: #5a605c,
-    50: #727875,
-    60: #8c928e,
-    70: #a7ada8,
-    80: #c2c8c4,
-    90: #dee4df,
-    95: #ecf2ed,
-    98: #f5fbf6,
-    99: #f8fef9,
+    10: #340042,
+    20: #55006a,
+    25: #66027e,
+    30: #74198b,
+    35: #812898,
+    40: #8f37a5,
+    50: #ab51c0,
+    60: #c86cdd,
+    70: #e586fa,
+    80: #f4aeff,
+    90: #fdd6ff,
+    95: #ffebfd,
+    98: #fff7fa,
+    99: #fffbff,
     100: #ffffff,
   ),
   neutral: (
     0: #000000,
-    10: #181c1a,
-    20: #2d312f,
-    25: #383c3a,
-    30: #444845,
-    35: #4f5350,
-    40: #5b5f5c,
-    50: #747875,
-    60: #8e928e,
-    70: #a8aca8,
-    80: #c4c7c4,
-    90: #e0e3df,
-    95: #eef2ed,
-    98: #f7faf6,
-    99: #fafdf9,
+    10: #191b23,
+    20: #2e3038,
+    25: #393b43,
+    30: #44474f,
+    35: #50525a,
+    40: #5c5e67,
+    50: #757780,
+    60: #8e9099,
+    70: #a9abb4,
+    80: #c4c6d0,
+    90: #e1e2ec,
+    95: #eff0fa,
+    98: #f9f9ff,
+    99: #fefbff,
     100: #ffffff,
-    4: #0b0f0d,
-    6: #101412,
-    12: #1c201e,
-    17: #272b28,
-    22: #323633,
-    24: #363a38,
-    87: #d8dbd7,
-    92: #e6e9e5,
-    94: #ecefeb,
-    96: #f1f4f0,
+    4: #0b0e15,
+    6: #10131a,
+    12: #1d2027,
+    17: #272a31,
+    22: #32353c,
+    24: #363941,
+    87: #d8d9e3,
+    92: #e6e7f2,
+    94: #ecedf7,
+    96: #f2f3fd,
   ),
   neutral-variant: (
     0: #000000,
-    10: #171d1a,
-    20: #2c322f,
-    25: #373d3a,
-    30: #424845,
-    35: #4e5451,
-    40: #5a605c,
-    50: #727875,
-    60: #8c928e,
-    70: #a7ada8,
-    80: #c2c8c4,
-    90: #dee4df,
-    95: #ecf2ed,
-    98: #f5fbf6,
-    99: #f8fef9,
+    10: #161b27,
+    20: #2b303c,
+    25: #363b48,
+    30: #424754,
+    35: #4d525f,
+    40: #595e6c,
+    50: #727785,
+    60: #8c909f,
+    70: #a6abba,
+    80: #c2c6d6,
+    90: #dee2f2,
+    95: #edf0ff,
+    98: #f9f9ff,
+    99: #fefbff,
     100: #ffffff,
   ),
   error: (
     0: #000000,
-    10: #410003,
-    20: #680008,
-    25: #7d000c,
-    30: #930010,
-    35: #a80616,
-    40: #ba1a20,
-    50: #dd3735,
-    60: #ff544e,
-    70: #ff8980,
-    80: #ffb3ac,
+    10: #410002,
+    20: #690005,
+    25: #7e0007,
+    30: #93000a,
+    35: #a80710,
+    40: #ba1a1a,
+    50: #de3730,
+    60: #ff5449,
+    70: #ff897d,
+    80: #ffb4ab,
     90: #ffdad6,
-    95: #ffedeb,
+    95: #ffedea,
     98: #fff8f7,
     99: #fffbff,
     100: #ffffff,
@@ -135,71 +136,3 @@ $_rest: (
 
 $primary-palette: map.merge(map.get($_palettes, primary), $_rest);
 $tertiary-palette: map.merge(map.get($_palettes, tertiary), $_rest);
-
-@function _high-contrast-value($light, $dark, $theme-type) {
-  @if ($theme-type == light) {
-    @return $light;
-  }
-  @if ($theme-type == dark) {
-    @return $dark;
-  }
-  @if ($theme-type == color-scheme) {
-    @return light-dark(#{$light}, #{$dark});
-  }
-  
-  @error 'Unknown theme-type #{$theme-type}. Expected light, dark, or color-scheme';
-}
-
-@mixin high-contrast-overrides($theme-type) {
-  @include mat.theme-overrides((
-    primary: _high-contrast-value(#00341a, #beffd0, $theme-type),
-    on-primary: _high-contrast-value(#ffffff, #000000, $theme-type),
-    primary-container: _high-contrast-value(#00552f, #71d797, $theme-type),
-    on-primary-container: _high-contrast-value(#ffffff, #000f05, $theme-type),
-    inverse-primary: _high-contrast-value(#75db9a, #00532e, $theme-type),
-    primary-fixed: _high-contrast-value(#00552f, #91f8b5, $theme-type),
-    primary-fixed-dim: _high-contrast-value(#003b1f, #75db9a, $theme-type),
-    on-primary-fixed: _high-contrast-value(#ffffff, #000000, $theme-type),
-    on-primary-fixed-variant: _high-contrast-value(#ffffff, #001508, $theme-type),
-    secondary: _high-contrast-value(#292d2b, #eef1ed, $theme-type),
-    on-secondary: _high-contrast-value(#ffffff, #000000, $theme-type),
-    secondary-container: _high-contrast-value(#464a47, #c0c3c0, $theme-type),
-    on-secondary-container: _high-contrast-value(#ffffff, #080c0a, $theme-type),
-    secondary-fixed: _high-contrast-value(#464a47, #e0e3df, $theme-type),
-    secondary-fixed-dim: _high-contrast-value(#2f3431, #c4c7c4, $theme-type),
-    on-secondary-fixed: _high-contrast-value(#ffffff, #000000, $theme-type),
-    on-secondary-fixed-variant: _high-contrast-value(#ffffff, #0e1210, $theme-type),
-    tertiary: _high-contrast-value(#282d2b, #ecf1ed, $theme-type),
-    on-tertiary: _high-contrast-value(#ffffff, #000000, $theme-type),
-    tertiary-container: _high-contrast-value(#444a47, #bec4c0, $theme-type),
-    on-tertiary-container: _high-contrast-value(#ffffff, #070c0a, $theme-type),
-    tertiary-fixed: _high-contrast-value(#444a47, #dee4df, $theme-type),
-    tertiary-fixed-dim: _high-contrast-value(#2e3431, #c2c8c4, $theme-type),
-    on-tertiary-fixed: _high-contrast-value(#ffffff, #000000, $theme-type),
-    on-tertiary-fixed-variant: _high-contrast-value(#ffffff, #0d1210, $theme-type),
-    background: _high-contrast-value(#f7faf6, #101412, $theme-type),
-    on-background: _high-contrast-value(#181c1a, #e0e3df, $theme-type),
-    surface: _high-contrast-value(#f7faf6, #101412, $theme-type),
-    surface-dim: _high-contrast-value(#b6bab6, #101412, $theme-type),
-    surface-bright: _high-contrast-value(#f7faf6, #4d514e, $theme-type),
-    surface-container-low: _high-contrast-value(#eef2ed, #1c201e, $theme-type),
-    surface-container-lowest: _high-contrast-value(#ffffff, #000000, $theme-type),
-    surface-container: _high-contrast-value(#e0e3df, #2d312f, $theme-type),
-    surface-container-high: _high-contrast-value(#d2d5d1, #383c3a, $theme-type),
-    surface-container-highest: _high-contrast-value(#c4c7c4, #444845, $theme-type),
-    on-surface: _high-contrast-value(#000000, #ffffff, $theme-type),
-    shadow: _high-contrast-value(#000000, #000000, $theme-type),
-    scrim: _high-contrast-value(#000000, #000000, $theme-type),
-    surface-tint: _high-contrast-value(#006d3d, #75db9a, $theme-type),
-    inverse-surface: _high-contrast-value(#2d312f, #e0e3df, $theme-type),
-    inverse-on-surface: _high-contrast-value(#ffffff, #000000, $theme-type),
-    outline: _high-contrast-value(#282d2b, #ecf1ed, $theme-type),
-    outline-variant: _high-contrast-value(#444a47, #bec4c0, $theme-type),
-    error: _high-contrast-value(#600007, #ffece9, $theme-type),
-    on-error: _high-contrast-value(#ffffff, #000000, $theme-type),
-    error-container: _high-contrast-value(#980010, #ffaea6, $theme-type),
-    on-error-container: _high-contrast-value(#ffffff, #220001, $theme-type),
-    surface-variant: _high-contrast-value(#dee4df, #424845, $theme-type),
-    on-surface-variant: _high-contrast-value(#000000, #ffffff, $theme-type),
-  ))
- }
