--- a/src/app/components/navigation/navbar/navbar.component.scss
+++ b/src/app/components/navigation/navbar/navbar.component.scss
@@ -2,6 +2,7 @@ mat-toolbar{
     display: flex;
     justify-content: space-between;
     padding: 0 15px;
+    background-color: var(--mat-sys-surface-container-lowest);
 }
 ul{
     list-style-type: none;
