--- a/src/app/pages/loginPage/loginPage.component.html
+++ b/src/app/pages/loginPage/loginPage.component.html
@@ -7,35 +7,44 @@
     <div> 
       @if (processing()) {
         <div class="processing">
-          <div><mat-spinner></mat-spinner></div>
+          <div class="spinner"><mat-spinner></mat-spinner></div>
+        </div>
+      }
+      @if (loginError()) {
+        <div class="processing" (click)="clearLoginError()">
+          <div>
+            <p>{{ loginError() }}</p>
+            <span>Kliknij aby powrócić do formularza..</span>
+          </div>
         </div>
       }
       <form [formGroup]="form" (ngSubmit)="onSubmit()">
         <div class="fields">
-          <label for="email">E-mail</label>
-          <input type="email" formControlName="email" id="email">
-          <label for="password">Hasło</label>
-          <input type="password" formControlName="password" id="password">
-
+          <h1>Logowanie</h1>
+          <mat-form-field appearance="fill" class="full-width">
+            <mat-label>Adres e-mail</mat-label>
+              <input matInput formControlName="email" type="email" />
+            <mat-error *ngIf="form.get('email')?.hasError('required')">
+              Adres e-mail jest wymagany
+            </mat-error>
+            <mat-error *ngIf="form.get('email')?.hasError('email')">
+              Wprowadź poprawny adres e-mail
+            </mat-error>
+          </mat-form-field>
+          <mat-form-field appearance="fill" class="full-width">
+            <mat-label>Hasło</mat-label>
+              <input matInput formControlName="password" type="password" />
+            <mat-error *ngIf="form.get('password')?.hasError('required')">
+              Adres e-mail jest wymagany
+            </mat-error>
+            <mat-error *ngIf="form.get('password')?.hasError('minLength')">
+              Wprowadź poprawny adres e-mail
+            </mat-error>
+          </mat-form-field>
         </div>
-        <div class="submit">
-          <button type="submit">ZALOGUJ SIĘ</button>
-        </div>
-        <p>Logując się akceptujesz regulamin.</p>
-        <div class="error">
-          @if (form.get('password')?.errors?.['required']) {
-            <p>Hasło jest wymagane</p>
-          }
-          @if (form.get('password')?.errors?.['minlength']) {
-            <p>Hasło musi mieć min. 6 znaków</p>
-          }
-          @if (form.get('email')?.errors?.['required']) {
-            <p>E-mail jest wymagany</p>
-          }
-          @if (form.get('email')?.errors?.['email']) {
-            <p>Wpisz poprawny adres e-mail</p>
-          }
-        </div>
+        <mat-card-actions class="full-width">
+            <button matButton="filled" type="submit" class="full-width">Zaloguj się</button>
+        </mat-card-actions>
       </form>
     </div>
   </div>
