--- a/src/app/components/user/user.component.scss
+++ b/src/app/components/user/user.component.scss
@@ -1,12 +1,13 @@
-.user-container{
+.user-container, a{
     display: flex;
     vertical-align: middle;
     justify-content: space-between;
-    width: 120px;
     line-height: 60px;
-    padding: 0 12px;
+    gap: 1rem;
     user-select: none;
     cursor: pointer;
+    color: var(--text-primary);
+    text-decoration: none;
 }
 span{
     font-size: 1rem;
@@ -14,7 +15,4 @@ span{
 mat-icon{
     margin-top: auto;
     margin-bottom: auto;
-}
-a{
-    text-decoration: none;
 }
