--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,21 +1,14 @@
 
-// Include theming for Angular Material with `mat.theme()`.
-// This Sass mixin will define CSS variables that are used for styling Angular Material
-// components according to the Material 3 design spec.
-// Learn more about theming and how to use it for your application's
-// custom components at https://material.angular.dev/guide/theming
 @use '@angular/material' as mat;
+@use 'sass:map';
+@use './theme-colors' as colors;
+
 @include mat.core();
-@import './theme-colors';
+
 html {
   @include mat.theme((
     color: mat.m2-define-light-theme((
-      primary: map.get($_palettes, primary),
-      secondary: map.get($_palettes, secondary),
-      tertiary: map.get($_palettes, tertiary),
-      neutral: map.get($_palettes, neutral),
-      'neutral-variant': map.get($_palettes, 'neutral-variant'),
-      error: map.get($_palettes, error),
+      primary: colors.$primary-palette,
     )),
     typography: Roboto,
     density: 0,
@@ -23,20 +16,21 @@ html {
 }
 
 body {
-  // Default the application to a light color theme. This can be changed to
-  // `dark` to enable the dark color theme, or to `light dark` to defer to the
-  // user's system settings.
   color-scheme: light;
 
-  // Set a default background, font and text colors for the application using
-  // Angular Material's system-level CSS variables. Learn more about these
-  // variables at https://material.angular.dev/guide/system-variables
   background-color: var(--mat-sys-surface);
   color: var(--mat-sys-on-surface);
   font: var(--mat-sys-body-medium);
 
-  // Reset the user agent margin.
   margin: 0;
+}
+
+html, body {
+  height: 100%;
+}
+
+body {
+  font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
 html, body { height: 100%; }
